--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,8 @@
 :root {
   user-select: none;
   outline: none;
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
   scroll-behavior: smooth;
 }
