--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,18 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+.cards {
+  max-width: 100%;
+  transform: all 0.2s ease-in-out;
+  animation: scroll 40s linear infinite;
+  animation-fill-mode: both;
+}
+
+@keyframes scroll{
+  0%{
+    transform: translateX(100%);
+  }
+  100%{
+    transform: translateX(-100%);
+  }
+}
